--- a/app/src/main/res/layout/news_card.xml
+++ b/app/src/main/res/layout/news_card.xml
@@ -25,21 +25,34 @@
             android:layout_margin="@dimen/card_button_margin"/>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right">
             <TextView
                 android:id="@+id/more"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="ARTICLE PREVIEW"
+                android:text="@string/more"
                 android:layout_margin="@dimen/card_button_margin"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textColor="@color/colorSecondaryText"
+                />
             <TextView
                 android:id="@+id/share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="SHARE"
-                android:layout_margin="@dimen/card_button_margin"/>
+                android:text="@string/share"
+                android:layout_margin="@dimen/card_button_margin"
+                android:textColor="@color/colorSecondaryText"
+                />
+            <TextView
+                android:id="@+id/favorite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/favorite"
+                android:layout_margin="10dp"
+                android:textColor="@color/colorAccent"
+                />
         </LinearLayout>
 
     </LinearLayout>
