--- a/app/src/main/res/layout/news_page.xml
+++ b/app/src/main/res/layout/news_page.xml
@@ -18,25 +18,30 @@
             android:layout_height="wrap_content"
             android:id="@+id/news_text"
             android:text="News text"
-            android:layout_margin="10dp"/>
+            android:layout_margin="@dimen/default_margin"/>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="right">
-            <TextView
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/share"
-                android:text="@string/share"
-                android:layout_margin="10dp"/>
-            <TextView
+                android:src="@drawable/ic_more_black_24dp"
+                android:layout_margin="@dimen/default_margin"
+                android:id="@+id/more" />
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/favorite"
-                android:text="@string/favorite"
-                android:textColor="@color/colorAccent"
-                android:layout_margin="10dp"/>
+                android:src="@drawable/ic_reply_black_24dp"
+                android:layout_margin="@dimen/default_margin"
+                android:id="@+id/share" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_favorite_border_black_24dp"
+                android:layout_margin="@dimen/default_margin"
+                android:id="@+id/favorite" />
         </LinearLayout>
     </LinearLayout>
 
