--- a/app/src/main/res/layout/favorites_card.xml
+++ b/app/src/main/res/layout/favorites_card.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
@@ -18,19 +20,22 @@
                 android:text="Title"
                 android:layout_gravity="left"
                 android:id="@+id/title"
-                />
+                tools:ignore="RtlHardcoded" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right">
+                android:layout_gravity="right"
+                tools:ignore="RtlHardcoded">
 
                 <ImageView
                     android:id="@+id/favorite"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="right"
-                    android:src="@drawable/ic_favorite_black_24dp" />
+                    android:src="@drawable/ic_favorite_black_24dp"
+                    android:contentDescription="TODO"
+                    tools:ignore="ContentDescription,RtlHardcoded" />
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
