--- a/app/src/main/res/layout/news_card.xml
+++ b/app/src/main/res/layout/news_card.xml
@@ -21,7 +21,7 @@
             android:id="@+id/text_preview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Artice preview"
+            android:text="Article preview"
             android:layout_margin="@dimen/card_button_margin"/>
 
         <LinearLayout
