--- a/app/src/main/res/layout/favorites_card.xml
+++ b/app/src/main/res/layout/favorites_card.xml
@@ -1,43 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/default_margin"
+    android:layout_width="match_parent">
 
-    <android.support.v7.widget.CardView
+    <LinearLayout
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/default_margin"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/default_margin">
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_gravity="left"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="Title" />
+
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="@dimen/default_margin"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Title"
-                android:layout_gravity="left"
-                android:id="@+id/title"
-                tools:ignore="RtlHardcoded" />
+            android:layout_gravity="right"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <ImageView
+                android:contentDescription="TODO"
+                android:id="@+id/favorite"
                 android:layout_gravity="right"
-                tools:ignore="RtlHardcoded">
-
-                <ImageView
-                    android:id="@+id/favorite"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="right"
-                    android:src="@drawable/ic_favorite_black_24dp"
-                    android:contentDescription="TODO"
-                    tools:ignore="ContentDescription,RtlHardcoded" />
-            </LinearLayout>
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:src="@drawable/ic_favorite_black_24dp" />
         </LinearLayout>
-    </android.support.v7.widget.CardView>
-
-</android.support.constraint.ConstraintLayout>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
