--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="card_button_margin">10dp</dimen>
     <dimen name="default_margin">10dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="double_margin">20dp</dimen>
 </resources>
