--- a/app/src/main/res/layout/favorites_card.xml
+++ b/app/src/main/res/layout/favorites_card.xml
@@ -23,15 +23,23 @@
         <LinearLayout
             android:layout_gravity="right"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content">
+            android:layout_width="wrap_content"
+            android:orientation="horizontal">
 
             <ImageView
-                android:contentDescription="TODO"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:id="@+id/share"
+                android:src="@drawable/ic_reply_black_24dp"
+                android:layout_margin="@dimen/default_margin" />
+
+            <ImageView
                 android:id="@+id/favorite"
-                android:layout_gravity="right"
-                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_height="30dp"
                 android:layout_width="match_parent"
-                android:src="@drawable/ic_favorite_black_24dp" />
+                android:src="@drawable/ic_favorite_black_24dp"
+                android:layout_margin="@dimen/default_margin" />
         </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
