--- a/app/src/main/res/layout/frag_settings.xml
+++ b/app/src/main/res/layout/frag_settings.xml
@@ -2,12 +2,14 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/content">
 
     <Switch
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/double_margin"
+        android:textColor="@android:color/primary_text_dark_nodisable"
         android:text="@string/settings_dark_theme"
         android:id="@+id/settings_dark_theme" />
 
