--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,13 +13,20 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="DarkTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="windowActionBar">true</item>
+        <item name="windowNoTitle">false</item>
+        <item name="android:background">@color/colorMaterialDark</item>
+        <item name="android:windowBackground">@color/colorMaterialDark</item>
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <style name="AppThemeDark" parent="AppTheme" >
-        <item name="android:colorBackground">@color/cardview_dark_background</item>
-        <item name="android:textColorPrimary">?android:attr/textColorPrimaryInverse</item>
-    </style>
+    <style name="Theme.AppTheme.NoActionBar" parent="Theme.AppCompat.NoActionBar" />
+
 
 </resources>
